--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>LÉONIE</title>
 </head>
 <body>
-    <header>
+    <div class="header">
         <div>
             <h1>LÉONIE</h1>
         </div>
-        <nav>
+        <div class="nav">
             <ul>
                 <li><a href="#">low  quality</a></li>
                 <li><a href="#">middle quality</a></li>
                 <li><a href="#">high  quality</a></li>
             </ul>
-        </nav>
-    </header>
-    <section class="sec-header-2">
+        </div>
+    </div>
+    <div class="sec-header-2">
         <form action="" method="get">
             <input type="search" placeholder="search" name="search">
         </form>
@@ -31,17 +31,17 @@
             <i class="fa-solid fa-user"></i><span>your account</span>
         </div>
         <i class="fa-solid fa-bars"></i>
-    </section>
-    <section class="home"> 
+    </div>
+    <div class="home"> 
         <h1><span>LÉONIE</span> For perfumes</h1>
         <p>Chez LÉONIE nous avons à cœur la satisfaction de nos clients</p>
         <a class="button-1" href="#">get started</a>
         <a class="button-2" href="#">more info</a>
-    </section>
-    <main class="main-1">
+    </div>
+    <div class="main-1">
         <h1>Welcome to LÉONIE</h1>
         <div class="line"></div>
-        <section class="sec-1">
+        <div class="sec-1">
                 <div class="content"> 
                     <div class="parent">
                         <div class="cover">
@@ -73,12 +73,12 @@
                                 <li>3</li>
                             </ul>
                 </div>
-        </section>
-    </main>
-    <main class="main-2">
+        </div>
+    </div>
+    <div class="main-2">
         <h2 class="title-1">low level quality</h2>
-        <section class="sec-1" >
-            <article class="pro-1">
+        <div class="sec-1" >
+            <div class="pro-1">
                 <img src="photos/Messenger_creation_7249914815052058833.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%20</span>
@@ -87,8 +87,8 @@
                     <p>Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass "></i>
                 </div>
-            </article>
-            <article class="pro-2">
+            </div>
+            <div class="pro-2">
                 <img src="photos/Messenger_creation_7249914815049690217.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%25</span>
@@ -97,8 +97,8 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-            <article class="pro-3">
+            </div>
+            <div class="pro-3">
                 <img src="photos/Messenger_creation_7249914815056092033.jpeg" alt="photo">
                 <i id="icon-2" class="fa-solid fa-heart"></i>
                 <span>%15</span>
@@ -107,11 +107,11 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-        </section>
+            </div>
+        </div>
         <h2 class="title-2" >mid-level quality</h2>
-        <section class="sec-2" >
-            <article class="pro-1">
+        <div class="sec-2" >
+            <div class="pro-1">
                 <img src="photos/Messenger_creation_7249914815055816810.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i> 
                 <span>%10</span>
@@ -120,8 +120,8 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>    
-            <article class="pro-2">
+            </div>    
+            <div class="pro-2">
                 <img src="photos/Messenger_creation_7249914815057599391.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%15</span>
@@ -130,8 +130,8 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-            <article class="pro-3">
+            </div>
+            <div class="pro-3">
                 <img src="photos/Messenger_creation_7249914815058833131.jpeg" alt="photo">
                 <i id="icon-2" class="fa-solid fa-heart"></i>
                 <span>%20</span>
@@ -140,11 +140,11 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-        </section>
+            </div>
+        </div>
         <h2 class="title-3">high level quality</h2>
-        <section class="sec-3" >
-            <article class="pro-1">
+        <div class="sec-3" >
+            <div class="pro-1">
                 <img src="photos/Messenger_creation_7249914815060918459.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%15</span>
@@ -153,8 +153,8 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-            <article class="pro-2">
+            </div>
+            <div class="pro-2">
                 <img src="photos/Messenger_creation_7249914815056184448.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%5</span>
@@ -163,8 +163,8 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>    
-            <article class="pro-3">
+            </div>    
+            <div class="pro-3">
                 <img src="photos/Messenger_creation_7249914815062312951.jpeg" alt="photo">
                 <i class="fa-solid fa-heart"></i>
                 <span>%7</span>
@@ -173,11 +173,11 @@
                     <p class=".p">Acheter maintenant</p>
                     <i id="icon-2" class="fa-solid fa-magnifying-glass ico"></i>
                 </div>
-            </article>
-        </section>
-    </main>
-    <main class="main-3">
-        <section class="sec-4">
+            </div>
+        </div>
+    </div>
+    <div class="main-3">
+    <div class="sec-4">
             <h2 class="sec-4-title1" id="servisrs">Special features</h2>
             <div class="line"></div>
             <div class="features-parent">
@@ -226,11 +226,11 @@
                     </div>
                     </div>
             </div>
-        </section>
-    </main>    
-    <main class="main-4">
-        <section class="sec-1">
-            <article class="about-us">
+    </div>
+    </div>    
+    <div class="main-4">
+        <div class="sec-1">
+            <div class="about-us">
                 <h1> about us </h1>
                 <div class="line"></div>
                 <div class="content">
@@ -251,7 +251,7 @@
                         <span>Une expérience d'achat chez LÉONIE garantit satisfaction et qualité.</span>
                     </p>
                 </div>
-            </article>
+            </div>
             <div class="img">
                 <img src="photos/Leonie_CaseStudy_@72dpi_first_image-1-1880x964.jpg" alt="photo">
                 <div class="parent-divs">
@@ -260,10 +260,10 @@
                     <div></div>    
                 </div>
             </div>
-    </section>
-    </main>
-    <main class="main-5">
-        <section class="sec-1">
+    </div>
+    </div>
+    <div class="main-5">
+        <div class="sec-1">
             <div class="home-2">
                     <div class="background">
                         <div class="contant">
@@ -288,13 +288,13 @@
                         </div>
                     </div>
             </div>
-        </section>
-    </main>
-    <main class="main-6">
-        <section class="sec-1"> 
+        </div>
+    </div>
+    <div class="main-6">
+        <div class="sec-1"> 
             <h2 class="title">Premium subscriptions</h2> 
             <div class="line"></div>
-            <article class="container"> 
+            <div class="container"> 
                 <div class="content"> 
                     <div class="cover">
                         <h2>Free</h2>
@@ -308,8 +308,8 @@
                         <button>Sabmit</button>
                     </div>
                 </div>
-            </article>
-            <article class="container-2"> 
+            </div>
+            <div class="container-2"> 
                 <div class="content"> 
                     <div class="cover">
                         <h2>Free</h2>
@@ -323,8 +323,8 @@
                         <button>Sabmit</button>
                     </div>
                 </div>
-            </article>
-            <article class="container-3"> 
+            </div>
+            <div class="container-3"> 
                 <div class="content"> 
                     <div class="cover">
                         <h2>Free</h2>
@@ -338,11 +338,11 @@
                         <button>Sabmit</button>
                     </div>
                 </div>
-            </article>
-        </section>
-    </main>
-    <main class="main-7">
-            <section class="sec-1">
+            </div>
+        </div>
+    </div>
+    <div class="main-7">
+            <div class="sec-1">
                 <div class="parent-all-content"> 
                     <div class="all-content">
                                 <div class="parent-content">
@@ -376,10 +376,10 @@
                                 </div>
                     </div>
                 </div>
-            </section>
-    </main>
-    <main class="main-8">
-                <section class="sec-1">
+            </div>
+    </div>
+    <div class="main-8">
+                <div class="sec-1">
                     <div class="box-title">
                         <h2>best seller</h2>
                         <span></span>
@@ -387,7 +387,7 @@
                     <div class="container">
                         <div class="parent-content">
                             <div class="content">
-                                <article class="parent-items">
+                                <div class="parent-items">
                                     <div class="item">
                                         <img src="photos/Messenger_creation_7249914815055816810.jpeg" alt="avatar">
                                         <div class="parent-links">
@@ -400,8 +400,8 @@
                                             <h2 class="info-title">Eau Légère</h2>
                                             <p class="info-price">$165</p>
                                         </div>
-                                </article>
-                                <article class="parent-items-nth ">
+                                </div>
+                                <div class="parent-items-nth ">
                                     <div class="item">
                                         <img src="photos/Messenger_creation_7249914815057599391.jpeg" alt="avatar">
                                         <div class="parent-links">
@@ -414,8 +414,8 @@
                                             <h2 class="info-title">GIVENCHY</h2>
                                             <p class="info-price">$450</p>
                                         </div>
-                                </article>
-                                <article class="parent-items">
+                                </div>
+                                <div class="parent-items">
                                     <div class="item">
                                         <img src="photos/Messenger_creation_7249914815049690217.jpeg" alt="avatar">
                                         <div class="parent-links">
@@ -428,24 +428,24 @@
                                             <h2 class="info-title">Go Land</h2>
                                             <p class="info-price">$200</p>
                                         </div>
-                                </article>
+                                </div>
                             </div> 
                         </div>
                     </div>
-                </section>
-    </main>
-    <main class="main-9">
-                <section class="sec-1">
+                </div>
+    </div>
+    <div class="main-9">
+                <div class="sec-1">
                     <div class="parent-title">
                         <h2 class="titel">Excellent products</h2>
                         <span class="line"></span>
                     </div>
                     <div class="container">
                         <div class="content">
-                            <article class="parent-items">
-                                <figure class="parent-img">
+                            <div class="parent-items">
+                                <div class="parent-img">
                                     <img src="photos/Messenger_creation_7249914815049690217.jpeg" alt="photo">
-                                </figure>
+                                </div>
                                 <div class="info">
                                             <h3>LOOTAH</h3>
                                             <p>
@@ -455,11 +455,11 @@
                                             </p>
                                             <a href="#">Buy now</a>
                                 </div>
-                            </article> 
-                            <article class="parent-items-nth">
-                                <figure class="parent-img">
+                            </div> 
+                            <div class="parent-items-nth">
+                                <div class="parent-img">
                                     <img src="photos/Messenger_creation_7249914815052058833.jpeg" alt="photo">
-                                </figure>
+                                </div>
                                 <div class="info">
                                             <h3>Bvlgari Man</h3>
                                             <p>
@@ -469,11 +469,11 @@
                                             </p>
                                             <a href="#">Buy now</a>
                                 </div>
-                            </article> 
-                            <article class="parent-items-last">
-                                <figure class="parent-img">
+                            </div> 
+                            <div class="parent-items-last">
+                                <div class="parent-img">
                                     <img src="photos/Messenger_creation_7249914815055816810.jpeg" alt="photo">
-                                </figure>
+                                </div>
                                 <div class="info">
                                             <h3>Eau Légère</h3>
                                             <p>
@@ -483,12 +483,12 @@
                                             </p>
                                             <a href="#">Buy now</a>
                                 </div>
-                            </article> 
+                            </div> 
                         </div>
                     </div>
-                </section>
-    </main>
-<footer>
+                </div>
+    </div>
+<div class="footer">
     <h1>LÉONIE</h1>
     <ul class="parent-icons-footer">
         <li><a href="#"><i class="fa-brands fa-facebook-f fa-beat-fade"></i></a></li>
@@ -499,6 +499,6 @@
         <li><a href="#"><i class="fa-brands fa-google fa-beat-fade"></i></a></li>
     </ul>
     <p>© All Right Reservd By Shahd Muhammad</p>
-</footer>
+</div>
 </body>
 </html>
